[gd_scene load_steps=6 format=3 uid="uid://dh2dmg66au2sp"]

[ext_resource type="Script" uid="uid://c8l4dfj6fq1vg" path="res://scenes/unit/weapon/laser.gd" id="1_apy7y"]
[ext_resource type="PackedScene" uid="uid://cb1jy3pa1b4tk" path="res://scenes/component/laser_2d.tscn" id="2_ovepf"]
[ext_resource type="PackedScene" uid="uid://cxx07r8g5gvut" path="res://addons/retrograde/scenes/control/area_2d_attack.tscn" id="3_nvlsd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_st3aa"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53doh"]

[node name="Laser" type="CharacterBody2D"]
script = ExtResource("1_apy7y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_st3aa")

[node name="Laser2DShot" parent="." instance=ExtResource("2_ovepf")]
unique_name_in_owner = true
shot_length = 96.0
beam_speed = 2000.0
beam_width = 8.0

[node name="Laser2DBeam" parent="." instance=ExtResource("2_ovepf")]
unique_name_in_owner = true
beam_speed = 4000.0

[node name="Area2DAttack" parent="." instance=ExtResource("3_nvlsd")]
unique_name_in_owner = true
collision_layer = 4194304
collision_mask = 1048576
damage = 45.0
independent = true
groups = Array[StringName]([&"enemy"])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAttack"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_53doh")
